--- a/Eskool/Views/Account/Login.cshtml
+++ b/Eskool/Views/Account/Login.cshtml
@@ -1,168 +1,100 @@
 ﻿
-@{
-    Layout = null;
-}
-
+﻿@{
+     Layout = null;
+ }
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>Healthcare Pharmaceuticals Ltd.</title>
-    <link href="@Url.Content("~/images/password.png")" rel="shortcut icon" type="image/x-icon" />
 
-    <!-- Bootstrap -->
-    <link href="@Url.Content("~/vendors/bootstrap/dist/css/bootstrap.min.css")" rel="stylesheet">
-    <!-- Font Awesome -->
-    <link href="@Url.Content("~/vendors/font-awesome/css/font-awesome.min.css")" rel="stylesheet">
-    <!-- NProgress -->
-    <link href="@Url.Content("~/vendors/nprogress/nprogress.css")" rel="stylesheet">
-    <!-- Animate.css -->
-    @*<link href="@Url.Content("~/vendors/animate.css/animate.min.css")" rel="stylesheet">*@
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-    <!-- Custom Theme Style -->
-    <link href="@Url.Content("~/build/css/custom.min.css")" rel="stylesheet">
-    <link href="@Url.Content("https://fonts.googleapis.com/css2?family=Asap&family=Roboto:ital,wght@0,500;0,900;1,500&display=swap")" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="~/LoginContent/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a81368914c.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Eskool</title>
+
+    <!-- Custom fonts for this template-->
+    <link href="/EskoolWebContent/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
+
+    <!-- Custom styles for this template-->
+    <link href="/EskoolWebContent/css/sb-admin-2.min.css" rel="stylesheet">
+
 </head>
-<body>
-    <img class="wave" src="~/images/login-page (1).png">
+
+<body class="bg-gradient-primary">
+
     <div class="container">
-        <div class="img">
+
+        <!-- Outer Row -->
+        <div class="row justify-content-center">
+
+            <div class="col-xl-10 col-lg-12 col-md-9">
+
+                <div class="card o-hidden border-0 shadow-lg my-5">
+                    <div class="card-body p-0">
+                        <!-- Nested Row within Card Body -->
+                        <div class="row">
+
+                            @*<div class="col-lg-6 d-none d-lg-block bg-login-image"></div>*@
+                            <div class="d-flex align-items-center justify-content-center w-100">
+                            <div class="col-lg-6">
+                            <div class="p-5">
+                                <div class="text-center">
+                                    <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
+                                </div>
+                                <form method="post" asp-action="Login" id="formLogin">
+                                    <div class="form-group">
+                                        <label for="tbxUserName" class="form-label">User ID</label>
+                                        <input type="text" name="UserName" class="form-control" id="tbxUserName" aria-describedby="emailHelp" placeholder="Enter your User ID">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="tbxPassword" class="form-label">Password</label>
+                                        <input type="password" name="Password" class="form-control" id="tbxPassword" placeholder="Enter your password">
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="custom-control custom-checkbox small">
+                                            <input type="checkbox" class="custom-control-input" id="customCheck">
+                                            <label class="custom-control-label" for="customCheck">
+                                                Remember
+                                                Me
+                                            </label>
+                                        </div>
+                                    </div>
+                                    <input type="submit" name="Login" value="Login" class="btn btn-primary w-100 py-8 fs-4 mb-4 rounded-2">
+                                </form>
+                                <hr>
+                                <div class="text-center">
+                                    <a class="small" href="#">Forgot Password?</a>
+                                </div>
+                                <div class="text-center">
+                                    <a class="small" href="#">Create an Account!</a>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </div>
-        <div class="login-content">
-            <form method="post" asp-action="Login" id="formLogin">
-                <img src="~/images/hpl.gif">
-                <h5 style="color:#000000" class="title"></h5>
-                <br />
 
-                <div class="alert alert-danger alert-dismissible" id="divErrorArea" style="display:none" role="alert">
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                    <span id="lblError">@ViewBag.Error</span>
-                </div>
-                <div class="input-div one">
-                    <div class="i">
-                        <i class="fas fa-user"></i>
-                    </div>
-
-                    <div class="div">
-                        <h5>SAP ID</h5>
-                        <input name="UserName" type="text" class="input" id="tbxUserName">
-                    </div>
-                </div>
-                <div class="input-div pass">
-                    <div class="i">
-                        <i class="fas fa-lock"></i>
-                    </div>
-                    <div class="div">
-                        <h5>Password</h5>
-                        <input name="Password" type="password" class="input" id="tbxPassword">
-                    </div>
-                </div>
-               
-                <input type="submit" class="btn" value="Login" onclick="return DoLogin();" id="LoginButton">
-
-                <div class="separator">
-                    <div class="clearfix"></div>
-                    <br />
-                    <div>
-                        <p style="color: #6c757d; font-size: 14px; font-family: serif;">
-                            <strong>HGIA </strong>|MIS, HPL   © @DateTime.Now.Year
-                        </p>
-                    </div>
-                </div>
-            </form>
-        </div>
     </div>
 
+    <!-- Bootstrap core JavaScript-->
+    <script src="/EskoolWebContent/vendor/jquery/jquery.min.js"></script>
+    <script src="/EskoolWebContent/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
+    <!-- Core plugin JavaScript-->
+    <script src="/EskoolWebContent/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom scripts for all pages-->
+    <script src="/EskoolWebContent/js/sb-admin-2.min.js"></script>
 
 </body>
+
 </html>
-<!-- jQuery -->
-<script src="@Url.Content("~/vendors/jquery/dist/jquery.min.js")"></script>
-<!-- Bootstrap -->
-<script src="@Url.Content("~/vendors/bootstrap/dist/js/bootstrap.bundle.min.js")"></script>
-<!-- FastClick -->
-<script src="@Url.Content("~/vendors/fastclick/lib/fastclick.js")"></script>
-<!-- NProgress -->
-<script src="@Url.Content("~/vendors/nprogress/nprogress.js")"></script>
-<!-- validator -->
-<!-- <script src="../vendors/validator/validator.js"></script> -->
-<!-- Custom Theme Scripts -->
-<script src="@Url.Content("~/build/js/custom.min.js")"></script>
-<script>
-
-
-    $(document).ready(function () {
-        var errorMsg = $("#lblError").text();
-        if (errorMsg && errorMsg != null && errorMsg != "") {
-            $("#divErrorArea").fadeIn();
-            $("#divErrorArea").fadeIn("slow");
-            $("#divErrorArea").fadeOut(10000);
-        }
-    });
-    const inputs = document.querySelectorAll(".input");
-
-
-    function addcl() {
-        let parent = this.parentNode.parentNode;
-        parent.classList.add("focus");
-    }
-
-    function remcl() {
-        let parent = this.parentNode.parentNode;
-        if (this.value == "") {
-            parent.classList.remove("focus");
-        }
-    }
-
-
-    inputs.forEach(input => {
-        input.addEventListener("focus", addcl);
-        input.addEventListener("blur", remcl);
-    });
-
-
-
-    //var errorMsg = $("#lblError").text();
-    //if (errorMsg && errorMsg != null && errorMsg != "") {
-
-    //    $("#divErrorArea").fadeIn();
-    //    $("#divErrorArea").fadeIn("slow");
-    //    $("#divErrorArea").fadeOut(10000);
-
-    //}
-
-
-
-
-
-
-
-    function DoLogin() {
-
-
-        var userName = document.getElementById("tbxUserName").value; /* $("#tbxUserName").val();*/
-        var Password = document.getElementById("tbxUserName").value; /*$("#tbxPassword").val();*/
-
-        if (userName == "" || Password == "") {
-
-            $("#lblError").text("Enter User ID & Password");
-
-            $("#divErrorArea").fadeIn();
-            $("#divErrorArea").fadeIn("slow");
-            $("#divErrorArea").fadeOut(10000);
-
-            return false;
-
-        }
-
-        return true;
-
-    }
-
-</script>
