--- a/Eskool/Views/Pending/Index.cshtml
+++ b/Eskool/Views/Pending/Index.cshtml
@@ -1,7 +1,4 @@
-﻿<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-    </body>
-</html>
+﻿@{
+    Layout = "~/Views/Shared/_SiteLayout.cshtml";
+
+}
